// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`I3/I4 golden — buildFinalQuestions > 3 providers — question ids + prose + winner criteria 1`] = `
{
  "anthropic_claim_risk": {
    "criteria": {
      "false": "No — claims are appropriately hedged or clearly supportable from the debate context",
      "true": "Yes — contains one or more claims that appear unsupported or require external verification",
    },
    "instructions": "Did Claude make claims across the debate that appear unsupported, unverified, or that would require external fact-checking to confirm?",
    "type": "noul",
  },
  "anthropic_overall": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate Claude's overall performance across the entire debate — totality of argument, consistency across rounds, and cumulative contribution.",
    "type": "score",
  },
  "google_claim_risk": {
    "criteria": {
      "false": "No — claims are appropriately hedged or clearly supportable from the debate context",
      "true": "Yes — contains one or more claims that appear unsupported or require external verification",
    },
    "instructions": "Did Gemini make claims across the debate that appear unsupported, unverified, or that would require external fact-checking to confirm?",
    "type": "noul",
  },
  "google_overall": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate Gemini's overall performance across the entire debate — totality of argument, consistency across rounds, and cumulative contribution.",
    "type": "score",
  },
  "openai_claim_risk": {
    "criteria": {
      "false": "No — claims are appropriately hedged or clearly supportable from the debate context",
      "true": "Yes — contains one or more claims that appear unsupported or require external verification",
    },
    "instructions": "Did ChatGPT make claims across the debate that appear unsupported, unverified, or that would require external fact-checking to confirm?",
    "type": "noul",
  },
  "openai_overall": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate ChatGPT's overall performance across the entire debate — totality of argument, consistency across rounds, and cumulative contribution.",
    "type": "score",
  },
  "winner": {
    "criteria": {
      "anthropic": "Claude clearly demonstrated the strongest overall performance across the debate",
      "google": "Gemini clearly demonstrated the strongest overall performance across the debate",
      "openai": "ChatGPT clearly demonstrated the strongest overall performance across the debate",
      "tie": "The models performed so similarly across all evaluated dimensions that no clear winner can be identified — use only when genuinely indistinguishable",
    },
    "instructions": "Based on the full debate transcript, which model won? Evaluate on totality of argument, reasoning quality, coherence, and intellectual honesty. Choose a single winner unless performance is genuinely indistinguishable.",
    "type": "choice",
  },
}
`;

exports[`I3/I4 golden — buildRoundQuestions > follow-up round, 3 providers — question ids + prose 1`] = `
{
  "anthropic_coherence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the internal coherence and clarity of Claude's response — does the argument hold together consistently without contradiction?",
    "type": "score",
  },
  "anthropic_contradiction": {
    "criteria": {
      "false": "No — the argument is internally consistent or any apparent tension is adequately resolved",
      "true": "Yes — contains a material self-contradiction that undermines the argument's validity",
    },
    "instructions": "Did Claude's response contain a material internal contradiction — asserting two claims that directly undermine each other in a way that damages the argument's validity? Minor nuance, hedging, or tension that is adequately explained is NOT a contradiction.",
    "type": "noul",
  },
  "anthropic_eq_burden": {
    "criteria": {
      "false": "No — the argument is primarily conceptual, deductive, or analytical; no factual claim is load-bearing",
      "true": "Yes — the argument relies on load-bearing factual claims; if false, the argument materially weakens",
    },
    "instructions": "Did Claude's argument depend on factual claims such that the conclusion would materially weaken if those claims were false? Load-bearing factual premises include statistics, historical facts, scientific findings, research results, benchmarks, or claims about current events. Purely conceptual, deductive, or analytical arguments with no load-bearing factual premises should return false.",
    "type": "noul",
  },
  "anthropic_evidence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the precision of empirical claims in Claude's response. Use 5 as neutral (no empirical claims made). Score above 5 for claims that are specific, grounded, and stated with appropriate confidence — citation not required, specificity and groundedness are the bar. Score below 5 for vague appeals to authority ("studies show...", "research suggests..." with no precision), imprecise statistics, or claims stated with more confidence than the evidence warrants. This score may be overridden by the system if no evidentiary burden was incurred.",
    "type": "score",
  },
  "anthropic_fabrication": {
    "criteria": {
      "false": "No — no fabrication detected; any errors appear to be genuine mistakes rather than invented material",
      "true": "Yes — contains invented or materially misrepresented evidence central to the argument",
    },
    "instructions": "Did Claude fabricate or materially misrepresent evidence — inventing quotations, statistics, studies, citations, or findings that do not exist or were substantially falsified? Ordinary factual mistakes, disputed interpretations, and minor citation errors are NOT fabrication.",
    "type": "noul",
  },
  "anthropic_honesty": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate Claude's intellectual honesty — does it acknowledge genuine uncertainty, avoid false confidence, and engage fairly with opposing points rather than strawmanning them?",
    "type": "score",
  },
  "anthropic_reasoning": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the quality of Claude's reasoning and logical structure in this round.",
    "type": "score",
  },
  "anthropic_relevance": {
    "criteria": {
      "false": "No — the response directly addresses the prompt and/or the opponents' arguments",
      "true": "Yes — the response sidesteps, deflects, or fails to engage with what was actually asked or argued",
    },
    "instructions": "Did Claude fail to respond to the user's prompt or the other models' specific arguments — ignoring what was asked or said, talking past opponents, or evading the actual question?",
    "type": "noul",
  },
  "google_coherence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the internal coherence and clarity of Gemini's response — does the argument hold together consistently without contradiction?",
    "type": "score",
  },
  "google_contradiction": {
    "criteria": {
      "false": "No — the argument is internally consistent or any apparent tension is adequately resolved",
      "true": "Yes — contains a material self-contradiction that undermines the argument's validity",
    },
    "instructions": "Did Gemini's response contain a material internal contradiction — asserting two claims that directly undermine each other in a way that damages the argument's validity? Minor nuance, hedging, or tension that is adequately explained is NOT a contradiction.",
    "type": "noul",
  },
  "google_eq_burden": {
    "criteria": {
      "false": "No — the argument is primarily conceptual, deductive, or analytical; no factual claim is load-bearing",
      "true": "Yes — the argument relies on load-bearing factual claims; if false, the argument materially weakens",
    },
    "instructions": "Did Gemini's argument depend on factual claims such that the conclusion would materially weaken if those claims were false? Load-bearing factual premises include statistics, historical facts, scientific findings, research results, benchmarks, or claims about current events. Purely conceptual, deductive, or analytical arguments with no load-bearing factual premises should return false.",
    "type": "noul",
  },
  "google_evidence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the precision of empirical claims in Gemini's response. Use 5 as neutral (no empirical claims made). Score above 5 for claims that are specific, grounded, and stated with appropriate confidence — citation not required, specificity and groundedness are the bar. Score below 5 for vague appeals to authority ("studies show...", "research suggests..." with no precision), imprecise statistics, or claims stated with more confidence than the evidence warrants. This score may be overridden by the system if no evidentiary burden was incurred.",
    "type": "score",
  },
  "google_fabrication": {
    "criteria": {
      "false": "No — no fabrication detected; any errors appear to be genuine mistakes rather than invented material",
      "true": "Yes — contains invented or materially misrepresented evidence central to the argument",
    },
    "instructions": "Did Gemini fabricate or materially misrepresent evidence — inventing quotations, statistics, studies, citations, or findings that do not exist or were substantially falsified? Ordinary factual mistakes, disputed interpretations, and minor citation errors are NOT fabrication.",
    "type": "noul",
  },
  "google_honesty": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate Gemini's intellectual honesty — does it acknowledge genuine uncertainty, avoid false confidence, and engage fairly with opposing points rather than strawmanning them?",
    "type": "score",
  },
  "google_reasoning": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the quality of Gemini's reasoning and logical structure in this round.",
    "type": "score",
  },
  "google_relevance": {
    "criteria": {
      "false": "No — the response directly addresses the prompt and/or the opponents' arguments",
      "true": "Yes — the response sidesteps, deflects, or fails to engage with what was actually asked or argued",
    },
    "instructions": "Did Gemini fail to respond to the user's prompt or the other models' specific arguments — ignoring what was asked or said, talking past opponents, or evading the actual question?",
    "type": "noul",
  },
  "openai_coherence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the internal coherence and clarity of ChatGPT's response — does the argument hold together consistently without contradiction?",
    "type": "score",
  },
  "openai_contradiction": {
    "criteria": {
      "false": "No — the argument is internally consistent or any apparent tension is adequately resolved",
      "true": "Yes — contains a material self-contradiction that undermines the argument's validity",
    },
    "instructions": "Did ChatGPT's response contain a material internal contradiction — asserting two claims that directly undermine each other in a way that damages the argument's validity? Minor nuance, hedging, or tension that is adequately explained is NOT a contradiction.",
    "type": "noul",
  },
  "openai_eq_burden": {
    "criteria": {
      "false": "No — the argument is primarily conceptual, deductive, or analytical; no factual claim is load-bearing",
      "true": "Yes — the argument relies on load-bearing factual claims; if false, the argument materially weakens",
    },
    "instructions": "Did ChatGPT's argument depend on factual claims such that the conclusion would materially weaken if those claims were false? Load-bearing factual premises include statistics, historical facts, scientific findings, research results, benchmarks, or claims about current events. Purely conceptual, deductive, or analytical arguments with no load-bearing factual premises should return false.",
    "type": "noul",
  },
  "openai_evidence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the precision of empirical claims in ChatGPT's response. Use 5 as neutral (no empirical claims made). Score above 5 for claims that are specific, grounded, and stated with appropriate confidence — citation not required, specificity and groundedness are the bar. Score below 5 for vague appeals to authority ("studies show...", "research suggests..." with no precision), imprecise statistics, or claims stated with more confidence than the evidence warrants. This score may be overridden by the system if no evidentiary burden was incurred.",
    "type": "score",
  },
  "openai_fabrication": {
    "criteria": {
      "false": "No — no fabrication detected; any errors appear to be genuine mistakes rather than invented material",
      "true": "Yes — contains invented or materially misrepresented evidence central to the argument",
    },
    "instructions": "Did ChatGPT fabricate or materially misrepresent evidence — inventing quotations, statistics, studies, citations, or findings that do not exist or were substantially falsified? Ordinary factual mistakes, disputed interpretations, and minor citation errors are NOT fabrication.",
    "type": "noul",
  },
  "openai_honesty": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate ChatGPT's intellectual honesty — does it acknowledge genuine uncertainty, avoid false confidence, and engage fairly with opposing points rather than strawmanning them?",
    "type": "score",
  },
  "openai_reasoning": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the quality of ChatGPT's reasoning and logical structure in this round.",
    "type": "score",
  },
  "openai_relevance": {
    "criteria": {
      "false": "No — the response directly addresses the prompt and/or the opponents' arguments",
      "true": "Yes — the response sidesteps, deflects, or fails to engage with what was actually asked or argued",
    },
    "instructions": "Did ChatGPT fail to respond to the user's prompt or the other models' specific arguments — ignoring what was asked or said, talking past opponents, or evading the actual question?",
    "type": "noul",
  },
}
`;

exports[`I3/I4 golden — buildRoundQuestions > initial round, 3 providers — question ids + prose 1`] = `
{
  "anthropic_coherence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the internal coherence and clarity of Claude's response — does the argument hold together consistently without contradiction?",
    "type": "score",
  },
  "anthropic_contradiction": {
    "criteria": {
      "false": "No — the argument is internally consistent or any apparent tension is adequately resolved",
      "true": "Yes — contains a material self-contradiction that undermines the argument's validity",
    },
    "instructions": "Did Claude's response contain a material internal contradiction — asserting two claims that directly undermine each other in a way that damages the argument's validity? Minor nuance, hedging, or tension that is adequately explained is NOT a contradiction.",
    "type": "noul",
  },
  "anthropic_eq_burden": {
    "criteria": {
      "false": "No — the argument is primarily conceptual, deductive, or analytical; no factual claim is load-bearing",
      "true": "Yes — the argument relies on load-bearing factual claims; if false, the argument materially weakens",
    },
    "instructions": "Did Claude's argument depend on factual claims such that the conclusion would materially weaken if those claims were false? Load-bearing factual premises include statistics, historical facts, scientific findings, research results, benchmarks, or claims about current events. Purely conceptual, deductive, or analytical arguments with no load-bearing factual premises should return false.",
    "type": "noul",
  },
  "anthropic_evidence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the precision of empirical claims in Claude's response. Use 5 as neutral (no empirical claims made). Score above 5 for claims that are specific, grounded, and stated with appropriate confidence — citation not required, specificity and groundedness are the bar. Score below 5 for vague appeals to authority ("studies show...", "research suggests..." with no precision), imprecise statistics, or claims stated with more confidence than the evidence warrants. This score may be overridden by the system if no evidentiary burden was incurred.",
    "type": "score",
  },
  "anthropic_fabrication": {
    "criteria": {
      "false": "No — no fabrication detected; any errors appear to be genuine mistakes rather than invented material",
      "true": "Yes — contains invented or materially misrepresented evidence central to the argument",
    },
    "instructions": "Did Claude fabricate or materially misrepresent evidence — inventing quotations, statistics, studies, citations, or findings that do not exist or were substantially falsified? Ordinary factual mistakes, disputed interpretations, and minor citation errors are NOT fabrication.",
    "type": "noul",
  },
  "anthropic_honesty": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate Claude's intellectual honesty — does it acknowledge genuine uncertainty, avoid false confidence, and engage fairly with opposing points rather than strawmanning them?",
    "type": "score",
  },
  "anthropic_reasoning": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the quality of Claude's reasoning and logical structure in this round.",
    "type": "score",
  },
  "anthropic_relevance": {
    "criteria": {
      "false": "No — the response directly addresses the prompt and/or the opponents' arguments",
      "true": "Yes — the response sidesteps, deflects, or fails to engage with what was actually asked or argued",
    },
    "instructions": "Did Claude fail to address the user's prompt — sidestepping, deflecting, or substituting a different question rather than answering directly?",
    "type": "noul",
  },
  "google_coherence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the internal coherence and clarity of Gemini's response — does the argument hold together consistently without contradiction?",
    "type": "score",
  },
  "google_contradiction": {
    "criteria": {
      "false": "No — the argument is internally consistent or any apparent tension is adequately resolved",
      "true": "Yes — contains a material self-contradiction that undermines the argument's validity",
    },
    "instructions": "Did Gemini's response contain a material internal contradiction — asserting two claims that directly undermine each other in a way that damages the argument's validity? Minor nuance, hedging, or tension that is adequately explained is NOT a contradiction.",
    "type": "noul",
  },
  "google_eq_burden": {
    "criteria": {
      "false": "No — the argument is primarily conceptual, deductive, or analytical; no factual claim is load-bearing",
      "true": "Yes — the argument relies on load-bearing factual claims; if false, the argument materially weakens",
    },
    "instructions": "Did Gemini's argument depend on factual claims such that the conclusion would materially weaken if those claims were false? Load-bearing factual premises include statistics, historical facts, scientific findings, research results, benchmarks, or claims about current events. Purely conceptual, deductive, or analytical arguments with no load-bearing factual premises should return false.",
    "type": "noul",
  },
  "google_evidence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the precision of empirical claims in Gemini's response. Use 5 as neutral (no empirical claims made). Score above 5 for claims that are specific, grounded, and stated with appropriate confidence — citation not required, specificity and groundedness are the bar. Score below 5 for vague appeals to authority ("studies show...", "research suggests..." with no precision), imprecise statistics, or claims stated with more confidence than the evidence warrants. This score may be overridden by the system if no evidentiary burden was incurred.",
    "type": "score",
  },
  "google_fabrication": {
    "criteria": {
      "false": "No — no fabrication detected; any errors appear to be genuine mistakes rather than invented material",
      "true": "Yes — contains invented or materially misrepresented evidence central to the argument",
    },
    "instructions": "Did Gemini fabricate or materially misrepresent evidence — inventing quotations, statistics, studies, citations, or findings that do not exist or were substantially falsified? Ordinary factual mistakes, disputed interpretations, and minor citation errors are NOT fabrication.",
    "type": "noul",
  },
  "google_honesty": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate Gemini's intellectual honesty — does it acknowledge genuine uncertainty, avoid false confidence, and engage fairly with opposing points rather than strawmanning them?",
    "type": "score",
  },
  "google_reasoning": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the quality of Gemini's reasoning and logical structure in this round.",
    "type": "score",
  },
  "google_relevance": {
    "criteria": {
      "false": "No — the response directly addresses the prompt and/or the opponents' arguments",
      "true": "Yes — the response sidesteps, deflects, or fails to engage with what was actually asked or argued",
    },
    "instructions": "Did Gemini fail to address the user's prompt — sidestepping, deflecting, or substituting a different question rather than answering directly?",
    "type": "noul",
  },
  "openai_coherence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the internal coherence and clarity of ChatGPT's response — does the argument hold together consistently without contradiction?",
    "type": "score",
  },
  "openai_contradiction": {
    "criteria": {
      "false": "No — the argument is internally consistent or any apparent tension is adequately resolved",
      "true": "Yes — contains a material self-contradiction that undermines the argument's validity",
    },
    "instructions": "Did ChatGPT's response contain a material internal contradiction — asserting two claims that directly undermine each other in a way that damages the argument's validity? Minor nuance, hedging, or tension that is adequately explained is NOT a contradiction.",
    "type": "noul",
  },
  "openai_eq_burden": {
    "criteria": {
      "false": "No — the argument is primarily conceptual, deductive, or analytical; no factual claim is load-bearing",
      "true": "Yes — the argument relies on load-bearing factual claims; if false, the argument materially weakens",
    },
    "instructions": "Did ChatGPT's argument depend on factual claims such that the conclusion would materially weaken if those claims were false? Load-bearing factual premises include statistics, historical facts, scientific findings, research results, benchmarks, or claims about current events. Purely conceptual, deductive, or analytical arguments with no load-bearing factual premises should return false.",
    "type": "noul",
  },
  "openai_evidence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the precision of empirical claims in ChatGPT's response. Use 5 as neutral (no empirical claims made). Score above 5 for claims that are specific, grounded, and stated with appropriate confidence — citation not required, specificity and groundedness are the bar. Score below 5 for vague appeals to authority ("studies show...", "research suggests..." with no precision), imprecise statistics, or claims stated with more confidence than the evidence warrants. This score may be overridden by the system if no evidentiary burden was incurred.",
    "type": "score",
  },
  "openai_fabrication": {
    "criteria": {
      "false": "No — no fabrication detected; any errors appear to be genuine mistakes rather than invented material",
      "true": "Yes — contains invented or materially misrepresented evidence central to the argument",
    },
    "instructions": "Did ChatGPT fabricate or materially misrepresent evidence — inventing quotations, statistics, studies, citations, or findings that do not exist or were substantially falsified? Ordinary factual mistakes, disputed interpretations, and minor citation errors are NOT fabrication.",
    "type": "noul",
  },
  "openai_honesty": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate ChatGPT's intellectual honesty — does it acknowledge genuine uncertainty, avoid false confidence, and engage fairly with opposing points rather than strawmanning them?",
    "type": "score",
  },
  "openai_reasoning": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the quality of ChatGPT's reasoning and logical structure in this round.",
    "type": "score",
  },
  "openai_relevance": {
    "criteria": {
      "false": "No — the response directly addresses the prompt and/or the opponents' arguments",
      "true": "Yes — the response sidesteps, deflects, or fails to engage with what was actually asked or argued",
    },
    "instructions": "Did ChatGPT fail to address the user's prompt — sidestepping, deflecting, or substituting a different question rather than answering directly?",
    "type": "noul",
  },
}
`;

exports[`I3/I4 golden — buildRoundQuestions > single-provider round (edge case) — key generation still correct 1`] = `
{
  "openai_coherence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the internal coherence and clarity of ChatGPT's response — does the argument hold together consistently without contradiction?",
    "type": "score",
  },
  "openai_contradiction": {
    "criteria": {
      "false": "No — the argument is internally consistent or any apparent tension is adequately resolved",
      "true": "Yes — contains a material self-contradiction that undermines the argument's validity",
    },
    "instructions": "Did ChatGPT's response contain a material internal contradiction — asserting two claims that directly undermine each other in a way that damages the argument's validity? Minor nuance, hedging, or tension that is adequately explained is NOT a contradiction.",
    "type": "noul",
  },
  "openai_eq_burden": {
    "criteria": {
      "false": "No — the argument is primarily conceptual, deductive, or analytical; no factual claim is load-bearing",
      "true": "Yes — the argument relies on load-bearing factual claims; if false, the argument materially weakens",
    },
    "instructions": "Did ChatGPT's argument depend on factual claims such that the conclusion would materially weaken if those claims were false? Load-bearing factual premises include statistics, historical facts, scientific findings, research results, benchmarks, or claims about current events. Purely conceptual, deductive, or analytical arguments with no load-bearing factual premises should return false.",
    "type": "noul",
  },
  "openai_evidence": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the precision of empirical claims in ChatGPT's response. Use 5 as neutral (no empirical claims made). Score above 5 for claims that are specific, grounded, and stated with appropriate confidence — citation not required, specificity and groundedness are the bar. Score below 5 for vague appeals to authority ("studies show...", "research suggests..." with no precision), imprecise statistics, or claims stated with more confidence than the evidence warrants. This score may be overridden by the system if no evidentiary burden was incurred.",
    "type": "score",
  },
  "openai_fabrication": {
    "criteria": {
      "false": "No — no fabrication detected; any errors appear to be genuine mistakes rather than invented material",
      "true": "Yes — contains invented or materially misrepresented evidence central to the argument",
    },
    "instructions": "Did ChatGPT fabricate or materially misrepresent evidence — inventing quotations, statistics, studies, citations, or findings that do not exist or were substantially falsified? Ordinary factual mistakes, disputed interpretations, and minor citation errors are NOT fabrication.",
    "type": "noul",
  },
  "openai_honesty": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate ChatGPT's intellectual honesty — does it acknowledge genuine uncertainty, avoid false confidence, and engage fairly with opposing points rather than strawmanning them?",
    "type": "score",
  },
  "openai_reasoning": {
    "criteria": [
      "1 — Fails entirely",
      "2 — Very poor",
      "3 — Poor",
      "4 — Below average",
      "5 — Average",
      "6 — Above average",
      "7 — Good",
      "8 — Very good",
      "9 — Excellent",
      "10 — Outstanding",
    ],
    "instructions": "Rate the quality of ChatGPT's reasoning and logical structure in this round.",
    "type": "score",
  },
  "openai_relevance": {
    "criteria": {
      "false": "No — the response directly addresses the prompt and/or the opponents' arguments",
      "true": "Yes — the response sidesteps, deflects, or fails to engage with what was actually asked or argued",
    },
    "instructions": "Did ChatGPT fail to address the user's prompt — sidestepping, deflecting, or substituting a different question rather than answering directly?",
    "type": "noul",
  },
}
`;

exports[`I9 golden — queryJev mock answers (TYPESAFE_API_KEY unset) > mock answers for final questions across 3 providers 1`] = `
{
  "anthropic_claim_risk": {
    "confidence": 0.7,
    "noul": 0.2,
    "type": "noul",
  },
  "anthropic_overall": {
    "confidence": 0.7,
    "score": 5.8,
    "type": "score",
  },
  "google_claim_risk": {
    "confidence": 0.7,
    "noul": 0.2,
    "type": "noul",
  },
  "google_overall": {
    "confidence": 0.7,
    "score": 4.2,
    "type": "score",
  },
  "openai_claim_risk": {
    "confidence": 0.7,
    "noul": 0.2,
    "type": "noul",
  },
  "openai_overall": {
    "confidence": 0.7,
    "score": 4.8,
    "type": "score",
  },
  "winner": {
    "choice": "anthropic",
    "confidence": 0.95,
    "probabilities": {
      "anthropic": 0.95,
      "google": 0.01666666666666668,
      "openai": 0.01666666666666668,
      "tie": 0.01666666666666668,
    },
    "type": "choice",
  },
}
`;

exports[`I9 golden — queryJev mock answers (TYPESAFE_API_KEY unset) > mock answers for round-followup questions across 3 providers 1`] = `
{
  "anthropic_coherence": {
    "confidence": 0.7,
    "score": 6.1,
    "type": "score",
  },
  "anthropic_contradiction": {
    "confidence": 0.7,
    "noul": 0.1,
    "type": "noul",
  },
  "anthropic_eq_burden": {
    "confidence": 0.7,
    "noul": 0.7,
    "type": "noul",
  },
  "anthropic_evidence": {
    "confidence": 0.7,
    "score": 5.5,
    "type": "score",
  },
  "anthropic_fabrication": {
    "confidence": 0.7,
    "noul": 0.1,
    "type": "noul",
  },
  "anthropic_honesty": {
    "confidence": 0.7,
    "score": 6.2,
    "type": "score",
  },
  "anthropic_reasoning": {
    "confidence": 0.7,
    "score": 5.8,
    "type": "score",
  },
  "anthropic_relevance": {
    "confidence": 0.7,
    "noul": 0.2,
    "type": "noul",
  },
  "google_coherence": {
    "confidence": 0.7,
    "score": 4.4,
    "type": "score",
  },
  "google_contradiction": {
    "confidence": 0.7,
    "noul": 0.1,
    "type": "noul",
  },
  "google_eq_burden": {
    "confidence": 0.7,
    "noul": 0.7,
    "type": "noul",
  },
  "google_evidence": {
    "confidence": 0.7,
    "score": 4,
    "type": "score",
  },
  "google_fabrication": {
    "confidence": 0.7,
    "noul": 0.1,
    "type": "noul",
  },
  "google_honesty": {
    "confidence": 0.7,
    "score": 4.5,
    "type": "score",
  },
  "google_reasoning": {
    "confidence": 0.7,
    "score": 4.2,
    "type": "score",
  },
  "google_relevance": {
    "confidence": 0.7,
    "noul": 0.2,
    "type": "noul",
  },
  "openai_coherence": {
    "confidence": 0.7,
    "score": 5.2,
    "type": "score",
  },
  "openai_contradiction": {
    "confidence": 0.7,
    "noul": 0.1,
    "type": "noul",
  },
  "openai_eq_burden": {
    "confidence": 0.7,
    "noul": 0.7,
    "type": "noul",
  },
  "openai_evidence": {
    "confidence": 0.7,
    "score": 4.6,
    "type": "score",
  },
  "openai_fabrication": {
    "confidence": 0.7,
    "noul": 0.1,
    "type": "noul",
  },
  "openai_honesty": {
    "confidence": 0.7,
    "score": 5,
    "type": "score",
  },
  "openai_reasoning": {
    "confidence": 0.7,
    "score": 4.8,
    "type": "score",
  },
  "openai_relevance": {
    "confidence": 0.7,
    "noul": 0.2,
    "type": "noul",
  },
}
`;

exports[`I9 golden — queryJev mock answers (TYPESAFE_API_KEY unset) > mock answers for round-initial questions across 3 providers 1`] = `
{
  "anthropic_coherence": {
    "confidence": 0.7,
    "score": 6.1,
    "type": "score",
  },
  "anthropic_contradiction": {
    "confidence": 0.7,
    "noul": 0.1,
    "type": "noul",
  },
  "anthropic_eq_burden": {
    "confidence": 0.7,
    "noul": 0.7,
    "type": "noul",
  },
  "anthropic_evidence": {
    "confidence": 0.7,
    "score": 5.5,
    "type": "score",
  },
  "anthropic_fabrication": {
    "confidence": 0.7,
    "noul": 0.1,
    "type": "noul",
  },
  "anthropic_honesty": {
    "confidence": 0.7,
    "score": 6.2,
    "type": "score",
  },
  "anthropic_reasoning": {
    "confidence": 0.7,
    "score": 5.8,
    "type": "score",
  },
  "anthropic_relevance": {
    "confidence": 0.7,
    "noul": 0.2,
    "type": "noul",
  },
  "google_coherence": {
    "confidence": 0.7,
    "score": 4.4,
    "type": "score",
  },
  "google_contradiction": {
    "confidence": 0.7,
    "noul": 0.1,
    "type": "noul",
  },
  "google_eq_burden": {
    "confidence": 0.7,
    "noul": 0.7,
    "type": "noul",
  },
  "google_evidence": {
    "confidence": 0.7,
    "score": 4,
    "type": "score",
  },
  "google_fabrication": {
    "confidence": 0.7,
    "noul": 0.1,
    "type": "noul",
  },
  "google_honesty": {
    "confidence": 0.7,
    "score": 4.5,
    "type": "score",
  },
  "google_reasoning": {
    "confidence": 0.7,
    "score": 4.2,
    "type": "score",
  },
  "google_relevance": {
    "confidence": 0.7,
    "noul": 0.2,
    "type": "noul",
  },
  "openai_coherence": {
    "confidence": 0.7,
    "score": 5.2,
    "type": "score",
  },
  "openai_contradiction": {
    "confidence": 0.7,
    "noul": 0.1,
    "type": "noul",
  },
  "openai_eq_burden": {
    "confidence": 0.7,
    "noul": 0.7,
    "type": "noul",
  },
  "openai_evidence": {
    "confidence": 0.7,
    "score": 4.6,
    "type": "score",
  },
  "openai_fabrication": {
    "confidence": 0.7,
    "noul": 0.1,
    "type": "noul",
  },
  "openai_honesty": {
    "confidence": 0.7,
    "score": 5,
    "type": "score",
  },
  "openai_reasoning": {
    "confidence": 0.7,
    "score": 4.8,
    "type": "score",
  },
  "openai_relevance": {
    "confidence": 0.7,
    "noul": 0.2,
    "type": "noul",
  },
}
`;
